Příklady transakce a připojení k redis

--- a/DemoRedisCache/Views/Demo/Prehled.cshtml
+++ b/DemoRedisCache/Views/Demo/Prehled.cshtml
@@ -10,7 +10,7 @@
 
 <div>
     <div class="github">
-        Tento projekt je ke stažení na <a href="https://github.com/mholec/redis-demo">https://github.com/mholec/redis-demo</a>
+        Tento projekt je ke stažení na <a href="http://odkaz.me/redis">odkaz.me/redis</a>
     </div>
 
     <h1>Přehled ukázek</h1>
